--- a/src/pages/Box/styles.css
+++ b/src/pages/Box/styles.css
@@ -68,3 +68,9 @@
     color: #999;
     font-size: 13px;
 }
+
+@media (max-width: 600px) {
+    #box-container header img {
+        width: 200px;
+    }
+}
